--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/COSC-310-team-11/A3COSC310-Team11.github.io#readme",
   "dependencies": {
     "@google-cloud/translate": "^6.3.1",
+    "bing-translate-api": "^2.5.0",
     "express": "^4.17.3",
     "natural": "^5.1.13",
     "sentiment": "^5.0.2"
